myservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 31000
  selector:
    app: myservice
