myservice2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: myservice2
